----------
v6.1.0-git
----------

[mms] Fixed segfaults caused by SMTP debugging.


---------
v6.1.0RC1
---------

[mms] Add ability to (un)subscribe to all subfolders in dynamic view.
[mms] When checking for personal addresses when deciding whether to display
      images, only check against e-mail field.
[mms] Correctly notify dynamic mailbox view if sent-mail mailboxes are created
      in compose page.
[mms] Fix sending group addresses from smartmobile view.
[mms] Add 'horde_auth' option to SMTP configuration in backends.php.
[mms] Add null spam reporting driver.
[mms] Display information to user if incorrect character set data is preventing
      a text part from being displayed.
[mms] Fix regression in renaming mailboxes (Bug #12260).


-----------
v6.1.0beta2
-----------

[mms] Directly output image thumbnails via data URIs when possible.
[jan] Fix incorrect dependencies.


-----------
v6.1.0beta1
-----------

[mms] Add ability to create new flag directly from dynamic mailbox screen.
[mms] Implement 'refresh_time' preference in smartmobile view.
[mms] Add taphold message action menu to smartmobile mailbox page.
[mms] Add MongoDB driver for sentmail log storage.
[mms] Add IMAP cache specific purge action to the imap cache query script.
[mms] Add support for using SQL and NoSQL backends for IMAP/POP caching.
[mms] Add thumbnail generation for video attachments.
[mms] Convert Data URLs in a reply message into attachments so that compose
      attachment limits can be enforced (Bug #12167).
[mms] Allow attachments to be dragged/dropped from local filesystem on the
      dynamic compose page.
[mms] Hide browser generated file input widget for attachment upload in dynamic
      compose page.
[mms] Add attachment upload capability to smartmobile compose page.
[mms] Add HTML image/style blocking to smartmobile view.
[mms] Improved autocompleter in smartmobile compose view.
[mms] Add saving compose drafts in smartmobile view.